fix(symbol frames): align math img answers to radio buttons

--- a/Content/Styles/SymbolFrames/Site.scss
+++ b/Content/Styles/SymbolFrames/Site.scss
@@ -56,6 +56,10 @@ html, body {
   padding: 5px;
 }
 
+.number img {
+  margin-top: -8px;
+}
+
 .spanish-answer,
 .english-answer {
   margin: 0px;
